Closed
Bug 1665623
Opened 5 years ago
Closed 5 years ago
Potential deadlock detected in nsHttpTransaction::Restart()
Categories
(Core :: Networking: HTTP, defect, P2)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
83 Branch
Tracking | Status | |
---|---|---|
firefox83 | --- | fixed |
People
(Reporter: kershaw, Assigned: kershaw)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
I've accidentally hit the code here and found the error message below.
0:05.88 pid:8592 ###!!! ERROR: Potential deadlock detected:
0:05.88 pid:8592 === Cyclical dependency starts at
0:05.88 pid:8592 --- RecursiveMutex : nsHttpRequestHead.mRecursiveMutex calling context
0:05.88 pid:8592 [stack trace unavailable]
0:05.88 pid:8592 --- Next dependency:
0:05.88 pid:8592 --- Mutex : nsHttp.sLock (currently acquired)
0:05.88 pid:8592 calling context
0:05.88 pid:8592 [stack trace unavailable]
0:05.88 pid:8592 === Cycle completed at
0:05.88 pid:8592 --- RecursiveMutex : nsHttpRequestHead.mRecursiveMutex calling context
0:05.88 pid:8592 [stack trace unavailable]
0:05.88 pid:8592 Deadlock may happen for some other execution
0:05.88 pid:8592 [8592, Socket Thread] WARNING: Potential deadlock detected:
0:05.88 pid:8592 Cyclical dependency starts at
0:05.88 pid:8592 RecursiveMutex : nsHttpRequestHead.mRecursiveMutex
0:05.88 pid:8592 Next dependency:
0:05.88 pid:8592 Mutex : nsHttp.sLock (currently acquired)
0:05.88 pid:8592 Cycle completed at
0:05.88 pid:8592 RecursiveMutex : nsHttpRequestHead.mRecursiveMutex
0:05.88 pid:8592 Deadlock may happen for some other execution
Apparently, this is caused by calling mRequestHead->SetHeader
when nsHttp::GetLock()
is locked.
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/033c559df918
Remove the unnessary lock r=necko-reviewers,valentin
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•