Bug 1665623 - Remove the unnessary lock r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D90672